--- a/blogmain.html
+++ b/blogmain.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Collaborators — Agastya Rathee</title>
-  <meta name="description" content="People I’ve worked with on class projects and hackathons.">
+  <title>Projects — Agastya Rathee</title>
+  <meta name="description" content="A gallery of sample projects by Agastya Rathee.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="img/logo.png" type="image/png">
 </head>
 <body>
@@ -17,69 +17,87 @@
     <h4 class="header__side-text">Agastya Rathee</h4>
   </header>
 
-  <!-- REAL NAV used everywhere -->
+  <!-- Accessible and consistent navigation -->
   <nav class="navigation" role="navigation" aria-label="Primary">
     <ul class="navigation__list">
       <li class="navigation__item"><a class="navigation__link" href="index.html">Home</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="blogmain.html">Projects</a></li>
+      <li class="navigation__item"><a class="navigation__link" href="projects.html" aria-current="page">Projects</a></li>
       <li class="navigation__item"><a class="navigation__link" href="about.html">About</a></li>
       <li class="navigation__item"><a class="navigation__link" href="contact.html">Connect</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="collaborators.html" aria-current="page">Collaborators</a></li>
-      <li class="media">
-        <a class="media__link" href="https://twitter.com" aria-label="Twitter">
-          <svg class="media__icon"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
-        </a>
-        <a class="media__link" href="https://instagram.com" aria-label="Instagram">
-          <svg class="media__icon"><use xlink:href="img/sprite.svg#icon-instagram"></use></svg>
-        </a>
-        <a class="media__link" href="https://www.linkedin.com" aria-label="LinkedIn">
-          <svg class="media__icon"><use xlink:href="img/sprite.svg#icon-facebook2"></use></svg>
-        </a>
-      </li>
     </ul>
   </nav>
 
   <main>
-    <h1 class="heading-primary">Collaborators</h1>
-    <p class="caption">People I’ve worked with on coursework, hackathons, and side projects.</p>
+    <h1 class="heading-primary">Projects</h1>
 
-    <section class="content" style="max-width:920px;margin:2rem auto;">
-      <h2 class="heading-secondary">Directory</h2>
+    <div class="blog-center">
+      <div class="blogs">
 
-      <!-- Description list satisfies the rubric -->
-      <dl class="blog__text">
-        <dt>Alex Chen</dt>
-        <dd>Backend & APIs — <a href="mailto:alex@example.com">alex@example.com</a></dd>
+        <div class="blogs__polaroid">
+          <figure class="blogs__info">
+            <img src="img/card back 1.jpg" alt="Project visual 1" class="blogs__img">
+            <figcaption class="blogs__caption">The seas, unexplored</figcaption>
+          </figure>
+        </div>
 
-        <dt>Priya Shah</dt>
-        <dd>Data Science & Visualization — <a href="mailto:pshah@example.com">pshah@example.com</a></dd>
+        <div class="blogs__polaroid" style="animation-delay:.2s;">
+          <figure class="blogs__info">
+            <img src="img/card back 3.jpg" alt="Project visual 2" class="blogs__img">
+            <figcaption class="blogs__caption">Into the unknown</figcaption>
+          </figure>
+        </div>
 
-        <dt>Diego Ramirez</dt>
-        <dd>Android & React Native — <a href="mailto:diego@example.com">diego@example.com</a></dd>
+        <div class="blogs__polaroid" style="animation-delay:.5s;">
+          <figure class="blogs__info">
+            <img src="img/card back 2.jpg" alt="Project visual 3" class="blogs__img">
+            <figcaption class="blogs__caption">Modern Aesthetics</figcaption>
+          </figure>
+        </div>
 
-        <dt>Sofia Nguyen</dt>
-        <dd>ML Ops & Deployment — <a href="mailto:sofia@example.com">sofia@example.com</a></dd>
-      </dl>
+        <div class="blogs__polaroid" style="animation-delay:1s;">
+          <figure class="blogs__info">
+            <img src="img/card back 4.jpg" alt="Project visual 4" class="blogs__img">
+            <figcaption class="blogs__caption">Rediscover</figcaption>
+          </figure>
+        </div>
 
-      <h3 class="heading-tertiary">Highlights</h3>
-      <ul class="blog__text">
-        <li>Shipped a GPU inference demo with dynamic batching.</li>
-        <li>Built an R Shiny explorer for city data.</li>
-        <li>Prototyped an outfit recommender in React Native.</li>
-      </ul>
+        <div class="blogs__polaroid" style="animation-delay:.4s;">
+          <figure class="blogs__info">
+            <img src="img/card back 5.jpg" alt="Project visual 5" class="blogs__img">
+            <figcaption class="blogs__caption">Food is Luv</figcaption>
+          </figure>
+        </div>
 
-      <p class="blog__text">
-        Markup pattern based on 
-        <a href="https://developer.mozilla.org/docs/Web/HTML/Element/dl" target="_blank" rel="noopener">
-          MDN’s description list guide
-        </a>.
-      </p>
-    </section>
+        <div class="blogs__polaroid" style="animation-delay:.7s;">
+          <figure class="blogs__info">
+            <img src="img/card back 6.jpg" alt="Project visual 6" class="blogs__img">
+            <figcaption class="blogs__caption">Beauty Redefined</figcaption>
+          </figure>
+        </div>
+
+      </div>
+    </div>
   </main>
-
+  
   <footer class="footer">
     <h4 class="footer__head">DISCLAIMER</h4>
-    <p class="footer__text">This is a dummy portfolio, only meant for academic purposes.</p>
+    <p class="footer__text">
+      This is a dummy portfolio created for academic purposes only.
+    </p>
+    <p class="footer__text">
+      All images are placeholders, and no commercial use is intended.
+    </p>
   </footer>
+
+  <!-- Hidden decorative loader -->
+  <div class="loader-wrapper" aria-hidden="true">
+    <figure class="loader-wrapper__loader">
+      <img src="img/loading animation.svg" alt="" class="loader-wrapper__animation">
+      <figcaption class="loader-wrapper__text">Loading...</figcaption>
+    </figure>
+  </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="js/app 2.js"></script>
 </body>
 </html>
