--- a/about.html
+++ b/about.html
@@ -21,34 +21,31 @@
 </head>
 
 <body>
-  <!-- Accessible, consistent navigation -->
-  <nav class="navigation" role="navigation" aria-label="Primary">
-    <div class="navigation__display"><div class="navigation__line"></div></div>
+
+  <div class="navigation">
+    <div class="navigation__display">
+      <div class="navigation__line"></div>
+    </div>
     <div class="navigation__container"></div>
-
     <ul class="navigation__list">
-      <li class="navigation__item"><a class="navigation__link" href="index.html">Home</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="blogmain.html">Projects</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="about.html" aria-current="page">About</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="collaborations.html">Collaborations</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="contact.html">Connect</a></li>
-
-      <li class="media__item">
-        <a class="media__link" href="https://www.facebook.com" aria-label="Facebook">
-          <svg class="media__icon" aria-hidden="true"><use xlink:href="img/sprite.svg#icon-facebook2"></use></svg>
-        </a>
-        <a class="media__link" href="https://www.instagram.com" aria-label="Instagram">
-          <svg class="media__icon" aria-hidden="true"><use xlink:href="img/sprite.svg#icon-instagram"></use></svg>
-        </a>
-        <a class="media__link" href="https://www.twitter.com" aria-label="Twitter/X">
-          <svg class="media__icon" aria-hidden="true"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
-        </a>
-        <a class="media__link" href="https://www.pinterest.com" aria-label="Pinterest">
-          <svg class="media__icon" aria-hidden="true"><use xlink:href="img/sprite.svg#icon-pinterest"></use></svg>
-        </a>
-      </li>
+      <a href="index.html" class="navigation__link">
+        <li class="navigation__item">Home</li>
+      </a>
+      <a href="blogmain.html" class="navigation__link">
+        <li class="navigation__item">Projects</li>
+      </a>
+      <a href="about.html" class="navigation__link">
+        <li class="navigation__item">About</li>
+      </a>
+      <a href="collaborations.html" class="navigation__link">
+        <li class="navigation__item">Collaborations</li>
+      </a>
+      <a href="contact.html" class="navigation__link">
+        <li class="navigation__item">Connect</li>
+      </a>
+      
     </ul>
-  </nav>
+  </div>
 
   <main class="about-section">
     <h1 class="heading-primary">About</h1>
@@ -122,3 +119,4 @@
   <script src="js/app 2.js"></script>
 </body>
 </html>
+
