--- a/collaborations.html
+++ b/collaborations.html
@@ -10,34 +10,31 @@
   <link rel="shortcut icon" href="img/logo.png" type="image/png">
 </head>
 <body>
-  <header class="header">
-    <a href="index.html" class="home-link">
-      <img src="img/logo.png" alt="Agastya Rathee logo" class="header__logo">
-    </a>
-    <h4 class="header__side-text">Agastya Rathee</h4>
-  </header>
 
-  <!-- REAL NAV used everywhere -->
-  <nav class="navigation" role="navigation" aria-label="Primary">
+  <div class="navigation">
+    <div class="navigation__display">
+      <div class="navigation__line"></div>
+    </div>
+    <div class="navigation__container"></div>
     <ul class="navigation__list">
-      <li class="navigation__item"><a class="navigation__link" href="index.html">Home</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="blogmain.html">Projects</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="about.html">About</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="contact.html">Connect</a></li>
-      <li class="navigation__item"><a class="navigation__link" href="collaborations.html" aria-current="page">collaborations</a></li>
-      <li class="media">
-        <a class="media__link" href="https://twitter.com" aria-label="Twitter">
-          <svg class="media__icon"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
-        </a>
-        <a class="media__link" href="https://instagram.com" aria-label="Instagram">
-          <svg class="media__icon"><use xlink:href="img/sprite.svg#icon-instagram"></use></svg>
-        </a>
-        <a class="media__link" href="https://www.linkedin.com" aria-label="LinkedIn">
-          <svg class="media__icon"><use xlink:href="img/sprite.svg#icon-facebook2"></use></svg>
-        </a>
-      </li>
+      <a href="index.html" class="navigation__link">
+        <li class="navigation__item">Home</li>
+      </a>
+      <a href="blogmain.html" class="navigation__link">
+        <li class="navigation__item">Projects</li>
+      </a>
+      <a href="about.html" class="navigation__link">
+        <li class="navigation__item">About</li>
+      </a>
+      <a href="collaborations.html" class="navigation__link">
+        <li class="navigation__item">Collaborations</li>
+      </a>
+      <a href="contact.html" class="navigation__link">
+        <li class="navigation__item">Connect</li>
+      </a>
+      
     </ul>
-  </nav>
+  </div>
 
   <main>
     <h1 class="heading-primary">Collaborators</h1>
