--- a/collaborations.html
+++ b/collaborations.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Collaborators — Agastya Rathee</title>
-  <meta name="description" content="People I’ve worked with on class projects and hackathons.">
+  <title>Collaborators – Agastya Rathee</title>
+  <meta name="description" content="A gallery of ongoing and completed projects by Agastya Rathee.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="img/logo.png" type="image/png">
 </head>
-<body>
 
+<body>
   <div class="navigation">
     <div class="navigation__display">
       <div class="navigation__line"></div>
