--- a/collaborations.html
+++ b/collaborations.html
@@ -67,23 +67,23 @@
         <dl class="directory">
           <div class="directory__row">
             <dt>Alex Chen</dt>
-            <dd>Backend &amp; APIs — <a href="mailto:alex@example.com">alex@example.com</a></dd>
+            <dd>Backend &amp; APIs — <a href="mailto:alex@example.com">alex@aje.com</a></dd>
           </div>
           <div class="directory__row">
             <dt>Priya Shah</dt>
-            <dd>Data Science &amp; Visualization — <a href="mailto:pshah@example.com">pshah@example.com</a></dd>
+            <dd>Data Science &amp; Visualization — <a href="mailto:pshah@example.com">pshah@exam.com</a></dd>
           </div>
           <div class="directory__row">
             <dt>Diego Ramirez</dt>
-            <dd>Android &amp; React Native — <a href="mailto:diego@example.com">diego@example.com</a></dd>
+            <dd>Android &amp; React Native — <a href="mailto:diego@example.com">diego@edewnjd.com</a></dd>
           </div>
           <div class="directory__row">
             <dt>Sofia Nguyen</dt>
-            <dd>ML Ops &amp; Deployment — <a href="mailto:sofia@example.com">sofia@example.com</a></dd>
+            <dd>ML Ops &amp; Deployment — <a href="mailto:sofia@example.com">sofia@encdle.com</a></dd>
           </div>
         </dl>
   
-        <h3 class="heading-tertiary">Highlights</h3>
+        
         <ul class="panel__list">
           <li>Shipped a GPU inference demo with dynamic batching.</li>
           <li>Built an R Shiny explorer for city data.</li>
