--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <rect x="2.5" y="2.5" width="330" height="102" />
               </g>
             </svg>
-            <a href="about.html"><p class="btn-animated__text btn-animated__text--t2">About Me</p></a>
+            <a href="about.html"><p class="btn-animated__text btn-animated__text--t2">About</p></a>
           </div>
         </nav>
       </div>
@@ -75,3 +75,4 @@
   <script src="js/app.js"></script>
 </body>
 </html>
+
