--- a/collaborations.html
+++ b/collaborations.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Contact form to reach Agastya Rathee for hiring/collaboration.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Raleway:wght@100;300;400;700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="img/logo.png">
   <style>
     .sr-only{
